2006-05-19  Jeremy Cribb <jcribb@email.unc.edu>
	- ve.m: fixed minor bug in determination of w.

2006-05-16  Jeremy Cribb <jcribb@email.unc.edu>
	- ve.m: added parameter to plot output in [Hz] or [rad/s].

2006-04-24  Jeremy Cribb <jcribb@email.unc.edu>
	- ve.m: minor changes to plot linestyle and output structure.

2006-04-24  Jeremy Cribb <jcribb@email.unc.edu>
	* rod_coord_corr.m: added.  beginning of a function that will analyze the correlation between coordinate axes for a diffusing rod (axial, normal, and radial).
	* laser_msd.m: 
			- file loading is now fixed to use latest load_laser_tracking.
			- computation of mean and error in plot is now fixed.
	* msd.m: added code to ignore window sizes that do not exist.
	* ve.m: added code to ignore window sizes that do not exist.
	
2006-04-24  Jeremy Cribb <jcribb@email.unc.edu>
	* ve.m: removed redundant legend entries.

2006-04-13  Kalpit Desai <kvdesai@email.unc.edu>
	* laser_msd.m:
	- Fixed a typo, so now doesn't crash when no file argument is supplied
	- Corrected the way data is loaded, compatible  to load_laser_tracking.
	- Corrected the function signature in the documentations

2006-04-04  Jeremy Cribb <jcribb@email.unc.edu>
	* laser_msd.m: patch so that 'edited.mat' files from lt_analysis_GUI can be read.

2006-03-05  Kalpit Desai <kvdesai@email.unc.edu>
	* msdbase.m: Added. A script that computes msd from raw time vs position data.

2006-02-03  Jeremy Cribb <jcribb@email.unc.edu>
	* rod_msd.m: added frame_rate as a parameter for tracking datasets in the case we use confocal or other videos not of the pulnix type.

2006-02-02  Jeremy Cribb <jcribb@email.unc.edu>
	* msd.m: added frame_rate as a parameter for tracking datasets in the case we use confocal or other videos not of the pulnix type.

2006-02-02  Jeremy Cribb <jcribb@email.unc.edu>
	* batch_drift_br.m: removed. obsolete.
	* batch_drift_fl.m: removed. obsolete.
	* batch_find_diff_co.m: removed. obsolete.